# nlp_variance_gtheory

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_bf16_eager.py  run_float32_only.sh  run_float32_v0.sh  run_full_mvp.sh  run_mmlu_after.sh  run_mvp.sh  run_reml_500.py  run_reml_500.sh  run_reml_500_v2.py  run_reml_500_v3.py
data/: arc_items_exp002.json  few_shot_arc.json  few_shot_exp001.json  few_shot_gsm8k.json  few_shot_hellaswag.json  few_shot_math.json  gsm8k_items_exp002.json  hellaswag_items_exp002.json  math_items_exp002.json  mmlu_items.json  mmlu_items_exp001.json  mmlu_items_exp001b_sample1.json  mmlu_items_exp001b_sample2.json  mmlu_items_exp001b_sample3.json
paper/: abstract.tex  acl.sty  appendix.tex  conclusion.tex  experiments.tex  introduction.tex  limitations.tex  main.bbl  main.tex  method.tex  references.bib  related_work.tex
scripts/: audit_g_item.py  auto_start_new_models.sh  auto_start_qwen.sh  balance_cross_model.py  bernoulli_adjustment.py  bf16_fp16_sensitivity.py  binary_sim_ranking_consistency.py  bootstrap_vs_jackknife.py  chain_single_gpu.sh  compute_g_coefficients.py  d014_item_heterogeneity.py  d014v2_subject_gradient_8model.py  dataset_a_gstudy.py  deepseek_lomo_cross_benchmark.py  difficulty_heterogeneity.py  dry_run_exp002.py  dstudy_bootstrap_ci_propagation.py  dstudy_per_benchmark.py  dstudy_progressive_validation.py  dstudy_single_condition.py  exp001_4model_gstudy.py  exp001_4model_gstudy_v2.py  exp001_bf16_2temp_subset.py  exp001_llama_bf16only_5facet.py  exp001b_gstudy.py  exp001b_henderson_i.py  (+56 more)
(+34 files in other folders)
