[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "nlp-variance-gtheory"
version = "0.1.0"
description = "G-theory variance decomposition for LLM evaluation reproducibility"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["src*"]
